# VLoc-app

./: .gitignore  .lintstagedrc  Cargo.toml  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: release.yml
.turbo/daemon/: 56b0acc4807fce2c-turbo.log.2026-03-14  56b0acc4807fce2c-turbo.log.2026-03-17
apps/desktop-mobile/: index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop-mobile/src/: App.tsx  index.css  main.tsx
apps/desktop-mobile/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-mobile/src-tauri/capabilities/: default.json
apps/desktop-mobile/src-tauri/icons/: icon.icns
apps/desktop-mobile/src-tauri/src/: commands.rs  lib.rs
apps/desktop-mobile/src/components/map/: GoogleMap.tsx  MapLibreView.tsx
apps/desktop-mobile/src/hooks/: useEngine.ts  useRouting.ts
apps/desktop-mobile/src/providers/: MapProvider.tsx  SimulationProvider.tsx
crates/vloc-engine/: Cargo.toml
crates/vloc-engine/src/: error.rs  lib.rs  math.rs  models.rs  simulator.rs
crates/vloc-os-mock/: Cargo.toml  build.rs
crates/vloc-os-mock/android/: build.gradle.kts
crates/vloc-os-mock/android/src/main/java/app/tauri/vloc_os_mock/: MockLocationPlugin.kt
crates/vloc-os-mock/android/src/main/java/com/vloc/app/: MockLocationPlugin.kt
crates/vloc-os-mock/permissions/: allow-start-mock.json  allow-stop-mock.json  allow-update-mock-location.json  default.json
crates/vloc-os-mock/permissions/autogenerated/: reference.md
crates/vloc-os-mock/permissions/autogenerated/commands/: start_mock.toml  stop_mock.toml  update_mock_location.toml
crates/vloc-os-mock/permissions/schemas/: schema.json
crates/vloc-os-mock/src/: lib.rs
locales/: README.en.md
