[workspace]
members = [
    "crates/*",
    "apps/desktop-mobile/src-tauri"
]
resolver = "2"

[workspace.dependencies]
tauri = { version = "2.10.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
opt-level = 1

[profile.release]
panic = "abort"
lto = true
opt-level = "s"
strip = true
