[package]
name = "vloc-engine"
version = "0.1.0"
edition = "2021"
authors = ["Ahmad <vloc@vloc.local>"]
description = "Pure math/simulation logic for GPS"
license = "GPL-3.0-or-later"

[dependencies]
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
specta-typescript = "0.0.9"
