[package]
name = "tauri-plugin-vloc-os-mock"
version = "0.1.0"
authors = ["Ahmad Abdelbary"]
edition = "2021"
description = "VLoc OS-level Location Mocking Plugin"

[dependencies]
tauri = { version = "2.10.3" }
serde = { version = "1.0", features = ["derive"] }
vloc-engine = { path = "../vloc-engine" }
