[package]
name = "tauri-plugin-vloc-os-mock"
version = "0.1.0"
authors = ["Ahmad Abdelbary"]
edition = "2021"
description = "VLoc OS-level Location Mocking Plugin"
links = "tauri-plugin-vloc-os-mock"

[build-dependencies]
tauri-plugin = { version = "2.0", features = ["build"] }

[dependencies]
tauri = { version = "2.10.3" }
serde = { version = "1.0", features = ["derive"] }
vloc-engine = { path = "../vloc-engine" }
windows = { version = "0.61.3", features = [
    "Devices_Geolocation",
    "Devices_Geolocation_Provider",
    "Foundation",
] }
