[package]
name = "tauri-plugin-vloc-os-mock"
version = "1.0.0"
authors = ["Ahmad Abdelbary"]
edition = "2021"
description = "VLoc OS-level Location Mocking Plugin"
links = "tauri-plugin-vloc-os-mock"

[build-dependencies]
tauri-plugin = { version = "2.0", features = ["build"] }

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
vloc-engine = { path = "../vloc-engine" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = [
    "Devices_Geolocation",
    "Devices_Geolocation_Provider",
    "Foundation",
] }
